# sparsediffax

./: .gitignore  README.md  notebook.py  pyproject.toml
.github/workflows/: CI.yml  publish.yml
docs/: demo.html
notebooks/: benchmark.py  demo.py
src/sparsediffax/: __init__.py  detection.py  execution.py  preparation.py
tests/: test_hessian.py  test_jacobian.py
